--- a/blog/src/_includes/layouts/base.njk
+++ b/blog/src/_includes/layouts/base.njk
@@ -19,6 +19,9 @@
     {# i18next for language support #}
     <script src="https://unpkg.com/i18next/dist/umd/i18next.min.js"></script>
     <script src="https://unpkg.com/i18next-browser-languagedetector/dist/umd/i18nextBrowserLanguageDetector.min.js"></script>
+    
+    {# Fuse.js for fuzzy search #}
+    <script src="https://unpkg.com/fuse.js@7.0.0/dist/fuse.min.js"></script>
 </head>
 <body>
     {# Navigation Bar - Full navbar from main site #}
@@ -144,7 +147,6 @@
     {# JavaScript Files #}
     <script src="/js/i18n.js"></script>
     <script src="/js/navbar.js"></script>
-    <script src="/js/blog-search.js"></script>
     
     {# Initialize Lucide icons #}
     <script>
