--- a/css/blog.css
+++ b/css/blog.css
@@ -53,7 +53,7 @@
     gap: var(--spacing-lg);
     margin-bottom: var(--spacing-xl);
     flex-wrap: wrap;
-    max-width: 1000px;
+    justify-content: center;
     margin-left: auto;
     margin-right: auto;
 }
