--- a/css/main.css
+++ b/css/main.css
@@ -17,10 +17,25 @@
 
 @font-face {
     font-family: 'Lato Light';
-    src: url('../assets/fonts/Lato/Lato-Light.ttf') format('truetype'),
-         url('../assets/fonts/Lato/Lato-Regular.ttf') format('truetype'),
-         url('../assets/fonts/Lato/Lato-Bold.ttf') format('truetype');
-    font-weight: 300 700;
+    src: url('../assets/fonts/Lato/Lato-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Lato Light';
+    src: url('../assets/fonts/Lato/Lato-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Lato Light';
+    src: url('../assets/fonts/Lato/Lato-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
     font-display: swap;
 }
 
